# ipopt_bindgen

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  IpoptWrapper.h  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-test.yml
examples/: hs071.rs  hs071_c_interface.rs  hs071_tnlp.rs
src/: application.rs  c_interface.rs  lib.rs  results.rs  tnlp.rs
