[package]
name = "ipopt_bindgen"
description = "Rust bindings to the C interface of Ipopt, a library for large-scale, constrained, nonlinear optimization."
authors = ["Matt Bolitho<matt.bolitho.software@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/MattBolitho/ipopt_bindgen"
documentation = "https://docs.rs/ipopt_bindgen"
license = "MIT OR Apache-2.0"
keywords = ["ipopt", "optimization", "ffi", "bindings"]
categories = ["external-ffi-bindings", "mathematics", "science"]

[build-dependencies]
bindgen = "0.65"

[target.'cfg(windows)'.build-dependencies]
cc = "1.0"
