[package]
name = "ipopt_bindgen"
description = "Rust bindings to the C interface of Ipopt, a library for large-scale, constrained, nonlinear optimization."
authors = ["Matt Bolitho<matt.bolitho.software@gmail.com>"]
version = "0.2.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/MattBolitho/ipopt_bindgen"
documentation = "https://docs.rs/ipopt_bindgen"
license = "MIT OR Apache-2.0"
keywords = ["ipopt", "optimization", "ffi", "bindings"]
categories = ["external-ffi-bindings", "mathematics", "science"]

[build-dependencies]
bindgen = "0.70"

[target.'cfg(windows)'.build-dependencies]
cc = "1.1"

[[example]]
name = "hs071"
test = true
harness = false
doc-scrape-examples = false
