[package]
name = "ipopt_bindgen"
description = "Rust bindings to the C interface of Ipopt - a library for large-scale, constrained, nonlinear optimization."
authors = ["Matt Bolitho<matt.bolitho.software@gmail.com>"]
version = "0.3.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/MattBolitho/ipopt_bindgen"
documentation = "https://docs.rs/ipopt_bindgen"
license = "Apache-2.0 with LLVM-exception"
keywords = ["ipopt", "optimization", "ffi", "bindings"]
categories = ["external-ffi-bindings", "mathematics", "science"]

[build-dependencies]
bindgen = "0.71"

[target.'cfg(windows)'.build-dependencies]
cc = "1.2"

[features]
default = ["rust-interface"]
rust-interface = []

[[example]]
name = "hs071_c_interface"
# test = true
harness = false
doc-scrape-examples = false
